2001-08-23  Gerd Moellmann  <gerd@gnu.org>

	* fileio.c (Finsert_file_contents): If VISIT is non-nil, and
	coding.type is coding_type_no_conversion or coding_type_raw_text,
	use Fset_buffer_multibyte to make the buffer unibyte if REPLACE is
	non-nil instead of just setting enable_multibyte_characters in the
	buffer to nil.

2001-08-22  Gerd Moellmann  <gerd@gnu.org>

	* dispextern.h (struct face_cache): Add member
	menu_face_changed_p.

	* xfaces.c (menu_face_changed_default): New variable.
	(menu_face_changed_count): Variable removed.
	(Finternal_set_lisp_face_attribute): Doc fix.  If FRAME is t, set
	the menu_face_changed_default flag, otherwise set the FRAME's
	menu_face_changed_p flag if the `menu' face has been changed.
	Prevent calling set_font_frame_param if FRAME is t.
	(make_face_cache): Initialize cache's menu_face_changed_p
	from menu_face_changed_default.
	(realize_basic_faces): Look into the frame's face cache to
	determine if the menu appearance needs updating.

	* keymap.c (access_keymap): Fix last change to not consider
	IDX when it has modifiers.

2001-08-21  Gerd Moellmann  <gerd@gnu.org>

	* keymap.c (access_keymap): If a binding of the form (GENERIC-CHAR
	. BINDING) exists, where GENERIC-CHAR is the generic character of
	the charset of IDX, return BINDING unless there exists a binding
	for IDX itself.

2001-08-16  Gerd Moellmann  <gerd@gnu.org>

	* xrdb.c (SYSV): Don't define on Solaris 2.
	From Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>.

	* xdisp.c (move_it_by_lines) <DVPOS < 0>: Start at the beginning
	of the screen line, not text line, containing IT's current
	position.

2001-08-15  Gerd Moellmann  <gerd@gnu.org>

	* window.c (window_scroll_pixel_based): Don't recenter if
	PT is partially visible in the window.

	* xterm.c (expose_window_tree, expose_window, expose_line): Return
	1 when overwriting mouse-face.
	(expose_frame): If mouse-face was overwritten, redo it.

	* xfaces.c (x_update_menu_appearance): Don't call